# imessage-rustpush

./: .gitignore  README.md  build-rust.sh  build.sh  flake.nix  go.mod  go.sum  imessage-rustpush.code-workspace
cmd/imessage-rustpush/: main.go
pkg/connector/: client.go  connector.go  ids.go  login.go
pkg/rustpushgo/: .gitignore  Cargo.toml  build.rs  rustpushgo.go  wrapper.go  wrapper_darwin.go  wrapper_linux.go
pkg/rustpushgo/src/: callback.rs  config.rs  ctx.rs  lib.rs  records.rs  rustpushgo.udl  util.rs  wrappers.rs
