[package]
name = "rustpushgo"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["staticlib"]
name = "rustpushgo"

[dependencies]
async-std = "1.13.0"
tokio = { version = "1", features = ["full"] }
uniffi = { version = "0.25.0" }
icloud_auth = { git = "https://github.com/OpenBubbles/apple-private-apis", branch = "master" }
rustpush = { git = "https://github.com/OpenBubbles/rustpush", branch = "master", default-features = false }

[build-dependencies]
uniffi = { version = "0.25.0", features = [ "build" ] }