[package]
name = "rustpushgo"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["staticlib"]
name = "rustpushgo"

[dependencies]
async-std = "1.13.0"
tokio = { version = "1", features = ["full"] }
uniffi = { version = "0.25.0" }
pretty_env_logger = "0.5.0"
icloud_auth = { git = "https://github.com/OpenBubbles/apple-private-apis", branch = "master" }
rustpush = { git = "https://github.com/OpenBubbles/rustpush", branch = "master", default-features = false }
plist = "1.7.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "gzip", "stream", "rustls-tls-webpki-roots"] }
serde = { version = "1.0", features = ["derive"] }
openssl = { version = "0.10.56", features = ["vendored"] }
uuid = { version = "1.4.1", features = ["v4"] }
base64 = "0.21.2"
regex = "1.9.3"
tokio-rustls = "0.24.1"
rustls = "0.21.6"
rustls-pemfile = "1.0.3"
rand = "0.8.5"
libflate = "2.0.0"
thiserror = "1.0.47"
async-recursion = "1.0.4"
html-escape = "0.2.13"
xml-rs = "0.8.17"
prost = "0.12.0"
log = "0.4.20"
async-trait = "0.1.73"
flume = "0.11.0"
deku = "0.16.0"
zip = { version = "2.1.5", default-features = false, features = ["deflate-zlib"] }
rasn = "0.16.0"
backon = "0.4.4"
futures = "0.3.30"

[build-dependencies]
uniffi = { version = "0.25.0", features = [ "build" ] }